@@ -18,10 +18,37 @@ path.clamping.variance.maxvalue = 5
 #path.russianroulette.depth = 5
 #light.maxdepth = 16
 #light.russianroulette.depth = 5
+##
+# Film outputs
+film.outputs.1.type = RGB_IMAGEPIPELINE
+film.outputs.1.index = 0
+film.outputs.1.filename = normal.png
+film.outputs.2.type = RGB_IMAGEPIPELINE
+film.outputs.2.index = 0
+film.outputs.2.filename = normal.exr
+film.outputs.3.type = RGB_IMAGEPIPELINE
+film.outputs.3.index = 1
+film.outputs.3.filename = denoised.png
+film.outputs.4.type = RGB_IMAGEPIPELINE
+film.outputs.4.index = 1
+film.outputs.4.filename = denoised.exr
+film.outputs.5.type = ALBEDO
+film.outputs.5.filename = ALBEDO.exr
+film.outputs.6.type = AVG_SHADING_NORMAL
+film.outputs.6.filename = AVG_SHADING_NORMAL.exr
+##
 # Film image pipeline plug-ins
-film.imagepipeline.0.type = TONEMAP_LINEAR
-#film.imagepipeline.1.type = BLOOM
-#film.imagepipeline.1.radius = 0.07
-#film.imagepipeline.1.weight = 0.25
-film.imagepipeline.1.type = GAMMA_CORRECTION
-film.imagepipeline.1.value = 2.2
+film.imagepipelines.0.0.type = TONEMAP_LINEAR
+#film.imagepipelines.0.1.type = BLOOM
+#film.imagepipelines.0.1.radius = 0.07
+#film.imagepipelines.0.1.weight = 0.25
+film.imagepipelines.0.1.type = GAMMA_CORRECTION
+film.imagepipelines.0.1.value = 2.2
+##
+film.imagepipelines.1.0.type = INTEL_OIDN
+film.imagepipelines.1.1.type = TONEMAP_LINEAR
+#film.imagepipelines.1.2.type = BLOOM
+#film.imagepipelines.1.2.radius = 0.07
+#film.imagepipelines.1.2.weight = 0.25
+film.imagepipelines.1.2.type = GAMMA_CORRECTION
+film.imagepipelines.1.2.value = 2.2
