@@ -79,5 +79,5 @@ film.outputs.5.type = ALBEDO
 film.outputs.5.filename = ALBEDO.exr
 film.outputs.6.type = AVG_SHADING_NORMAL
 film.outputs.6.filename = AVG_SHADING_NORMAL.exr
-film.outputs.6.type = SAMPLECOUNT
-film.outputs.6.filename = SAMPLECOUNT.exr
+film.outputs.7.type = SAMPLECOUNT
+film.outputs.7.filename = SAMPLECOUNT.exr
